# wf-kill

./: README.md  meson.build
metadata/: meson.build  wf-kill.xml
proto/: meson.build  wayfire-kill-view.xml
src/: main.cpp  meson.build
src/client/: meson.build  wf-kill.cpp  wf-kill.hpp
src/plugin/: wayfire-kill-view.cpp  wayfire-kill-view.hpp
